--- a/lab1/setCovering.ipynb
+++ b/lab1/setCovering.ipynb
@@ -43,9 +43,7 @@
     "        return self.priority == other.priority\n",
     "    \n",
     "    def __gt__(self, other):\n",
-    "        return self.priority > other.priority\n",
-    "\n",
-    "    "
+    "        return self.priority > other.priority"
    ]
   },
   {
