added setCovering.py and refactoring of code

--- a/lab1/setCovering.ipynb
+++ b/lab1/setCovering.ipynb
@@ -32,16 +32,24 @@
             "outputs": [],
             "source": [
                 "class PrioritizedSet:\n",
-                "    def __init__(self, priority: int, s: set):\n",
+                "    '''A set with a priority\n",
+                "    ...\n",
+                "    Attributes :\n",
+                "        priority : int\n",
+                "            The inverse priority of the set (smaller is higer priority)\n",
+                "        item : set\n",
+                "            The set\n",
+                "    '''\n",
+                "    def __init__(self, priority: int, set_: set):\n",
                 "        self.priority = 100 - priority\n",
-                "        self.item = s\n",
-                "        \n",
+                "        self.item = set_\n",
+                "\n",
                 "    def __lt__(self, other):\n",
                 "        return self.priority < other.priority\n",
-                "    \n",
+                "\n",
                 "    def __eq__(self, other):\n",
                 "        return self.priority == other.priority\n",
-                "    \n",
+                "\n",
                 "    def __gt__(self, other):\n",
                 "        return self.priority > other.priority"
             ]
@@ -53,8 +61,20 @@
             "outputs": [],
             "source": [
                 "def problem(N, seed=None):\n",
+                "    '''Generate a random problem given a seed\n",
+                "    ...\n",
+                "    Attributes :\n",
+                "        N : int\n",
+                "            The number of elements in the universe\n",
+                "        seed : int\n",
+                "            The seed for the random number generator\n",
+                "            default value = 42\n",
+                "    '''\n",
                 "    random.seed(seed)\n",
-                "    return [list(set(random.randint(0,N-1) for n in range(random.randint(N // 5, N // 2)))) for n in range(random.randint(N,N*5))]"
+                "    return [\n",
+                "        list(set(random.randint(0,N-1) for n in range(random.randint(N // 5, N // 2))))\n",
+                "        for n in range(random.randint(N,N*5))\n",
+                "        ]"
             ]
         },
         {
@@ -63,9 +83,23 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "def calculate_weight(r,g,s = set(),threshold=1):\n",
-                "    w = ceil(100*sum(x in g-r for x in s) / len(s))\n",
-                "    return 100 if w>=threshold*100 else w"
+                "def calculate_weight(result,goal,set_ = set(),threshold=1):\n",
+                "    '''Calculate the weight of a set\n",
+                "    ...\n",
+                "    Attributes :\n",
+                "        result : set\n",
+                "            The set of elements already covered\n",
+                "        goal : set\n",
+                "            The set of elements to cover\n",
+                "        set_ : set\n",
+                "            The set to evaluate\n",
+                "            default value = set()\n",
+                "        threshold : float\n",
+                "            The threshold for the weight\n",
+                "            default value = 1\n",
+                "    '''\n",
+                "    weight = ceil(100*sum(x in goal-result for x in set_) / len(set_))\n",
+                "    return 100 if weight >= threshold*100 else weight"
             ]
         },
         {
@@ -75,11 +109,24 @@
             "outputs": [],
             "source": [
                 "def search(sets,goal,N,threshold=1):\n",
+                "    '''Search for a solution to the set covering problem\n",
+                "    ...\n",
+                "    Attributes :\n",
+                "        sets : list\n",
+                "            The list of sets\n",
+                "        goal : set\n",
+                "            The set of elements to cover\n",
+                "        N : int\n",
+                "            The number of elements in the universe\n",
+                "        threshold : float\n",
+                "            The threshold for the weight\n",
+                "            default value = 1\n",
+                "    '''\n",
                 "    discovered_state = 0\n",
                 "    options = PriorityQueue()\n",
                 "    unused = PriorityQueue()\n",
-                "    for ps in sets:\n",
-                "        options.put(PrioritizedSet(int(100*len(ps)/N),ps))\n",
+                "    for element in sets:\n",
+                "        options.put(PrioritizedSet(int(100*len(element)/N),element))\n",
                 "    result = [options.get().item]\n",
                 "    result_set = set().union(result[0])\n",
                 "    while result is not None and not result_set == goal:\n",
@@ -93,18 +140,17 @@
                 "                while not unused.empty():\n",
                 "                    options.put(unused.get())\n",
                 "                break\n",
-                "            elif coverage != 0:\n",
+                "            if coverage != 0:\n",
                 "                unused.put(PrioritizedSet(coverage,s))\n",
                 "        else:\n",
                 "            if unused.empty():\n",
                 "                result = None\n",
                 "                break\n",
-                "            else:\n",
-                "                local_best = unused.get().item\n",
-                "                result.append(local_best)\n",
-                "                result_set = result_set.union(local_best)\n",
-                "                while not unused.empty():\n",
-                "                    options.put(unused.get())\n",
+                "            local_best = unused.get().item\n",
+                "            result.append(local_best)\n",
+                "            result_set = result_set.union(local_best)\n",
+                "            while not unused.empty():\n",
+                "                options.put(unused.get())\n",
                 "    logging.info(f\"explored state: {discovered_state}\")\n",
                 "    return result"
             ]
@@ -116,17 +162,17 @@
             "outputs": [],
             "source": [
                 "for n in [5,10,20,50,100,500,1000]:\n",
-                "    sets = problem(n,SEED)\n",
-                "    goal = set(_ for _ in range(n))\n",
-                "    logging.info(f\"N = {n}\")\n",
-                "    start_time_ns = perf_counter_ns()\n",
-                "    result = search(sets, goal,n,threshold=0.5)\n",
-                "    end_time_ns = perf_counter_ns()\n",
-                "    logging.info(f\"Time: {end_time_ns-start_time_ns} ns\")\n",
-                "    if result == None:\n",
-                "        logging.info(\"No solution found\")\n",
-                "    else:\n",
-                "        logging.info(f\"the weight of the solution is: {sum(len(s) for s in result)}\")"
+                "        sets = problem(n,SEED)\n",
+                "        goal = set(_ for _ in range(n))\n",
+                "        logging.info(f\"N = {n}\")\n",
+                "        start_time_ns = perf_counter_ns()\n",
+                "        result = search(sets, goal,n,threshold=0.5)\n",
+                "        end_time_ns = perf_counter_ns()\n",
+                "        logging.info(f\"Time: {end_time_ns-start_time_ns} ns\")\n",
+                "        if result is None:\n",
+                "            logging.info(\"No solution found\")\n",
+                "        else:\n",
+                "            logging.info(f\"the weight of the solution is: {sum(len(s) for s in result)}\")\n"
             ]
         }
     ],
