updated notebook: duplicating the code from setCovering.py

--- a/lab1/setCovering.ipynb
+++ b/lab1/setCovering.ipynb
@@ -7,8 +7,9 @@
             "outputs": [],
             "source": [
                 "import random\n",
-                "from queue import PriorityQueue\n",
                 "import logging\n",
+                "from itertools import groupby\n",
+                "from queue import PriorityQueue\n",
                 "from time import perf_counter_ns\n",
                 "from math import ceil"
             ]
@@ -23,35 +24,6 @@
                 "SEED = 42\n",
                 "\n",
                 "logging.basicConfig(format=\"%(message)s\", level=logging.INFO)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 3,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "class PrioritizedSet:\n",
-                "    '''A set with a priority\n",
-                "    ...\n",
-                "    Attributes :\n",
-                "        priority : int\n",
-                "            The inverse priority of the set (smaller is higer priority)\n",
-                "        item : set\n",
-                "            The set\n",
-                "    '''\n",
-                "    def __init__(self, priority: int, set_: set):\n",
-                "        self.priority = 100 - priority\n",
-                "        self.item = set_\n",
-                "\n",
-                "    def __lt__(self, other):\n",
-                "        return self.priority < other.priority\n",
-                "\n",
-                "    def __eq__(self, other):\n",
-                "        return self.priority == other.priority\n",
-                "\n",
-                "    def __gt__(self, other):\n",
-                "        return self.priority > other.priority"
             ]
         },
         {
@@ -83,8 +55,8 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "def calculate_weight(result,goal,set_ = set(),threshold=1):\n",
-                "    '''Calculate the weight of a set\n",
+                "def calculate_weight(result, goal, set_=set(), threshold=1):\n",
+                "    \"\"\"Calculate the weight of a set\n",
                 "    ...\n",
                 "    Attributes :\n",
                 "        result : set\n",
@@ -97,9 +69,11 @@
                 "        threshold : float\n",
                 "            The threshold for the weight\n",
                 "            default value = 1\n",
-                "    '''\n",
-                "    weight = ceil(100*sum(x in goal-result for x in set_) / len(set_))\n",
-                "    return 100 if weight >= threshold*100 else weight"
+                "    \"\"\"\n",
+                "    # weight = the percentage of new elements covered by the set in respect to the state of the solution\n",
+                "    weight = ceil(100 * sum(x in goal - result for x in set_) / len(set_))\n",
+                "    # return 0 if weight >= threshold * 100 else 100 - weight\n",
+                "    return 100 if weight >= threshold * 100 else weight"
             ]
         },
         {
@@ -108,8 +82,8 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "def search(sets,goal,N,threshold=1):\n",
-                "    '''Search for a solution to the set covering problem\n",
+                "def search(sets, goal, N, threshold=1):\n",
+                "    \"\"\"Search for a solution to the set covering problem\n",
                 "    ...\n",
                 "    Attributes :\n",
                 "        sets : list\n",
@@ -121,36 +95,41 @@
                 "        threshold : float\n",
                 "            The threshold for the weight\n",
                 "            default value = 1\n",
-                "    '''\n",
+                "    \"\"\"\n",
                 "    discovered_state = 0\n",
                 "    options = PriorityQueue()\n",
                 "    unused = PriorityQueue()\n",
+                "    # added a precomputing step:\n",
+                "    # remove empty lists and remove duplicates\n",
+                "    sets = [s for s in sets if s]\n",
+                "    sets = list(sets for sets, _ in groupby(sets))\n",
+                "\n",
                 "    for element in sets:\n",
-                "        options.put(PrioritizedSet(int(100*len(element)/N),element))\n",
-                "    result = [options.get().item]\n",
+                "        options.put((100 - int(100 * len(element) / N), element))\n",
+                "    result = [options.get()[-1]]\n",
                 "    result_set = set().union(result[0])\n",
                 "    while result is not None and not result_set == goal:\n",
-                "        while not options.empty():\n",
+                "        while not options.empty():  # until i have options extract an element\n",
                 "            discovered_state += 1\n",
-                "            s = options.get().item\n",
-                "            coverage = calculate_weight(result_set,goal,s,threshold)\n",
-                "            if coverage == 100:\n",
-                "                result.append(s)\n",
+                "            s = options.get()[-1]\n",
+                "            coverage = calculate_weight(result_set, goal, s, threshold)\n",
+                "            if coverage == 100:  # if all the elements in the set are new to the solution\n",
+                "                result.append(s)  # add it to the solution\n",
                 "                result_set = result_set.union(s)\n",
-                "                while not unused.empty():\n",
+                "                while not unused.empty():  # reinsert unused sets in the options queue\n",
                 "                    options.put(unused.get())\n",
                 "                break\n",
-                "            if coverage != 0:\n",
-                "                unused.put(PrioritizedSet(coverage,s))\n",
-                "        else:\n",
-                "            if unused.empty():\n",
+                "            if coverage != 0:  # if the coverage is > 0% insert it in the unused queue\n",
+                "                unused.put((100 - coverage, s))\n",
+                "        else:  # after checking all options\n",
+                "            if unused.empty():  # if there are no unused sets a result can not be reached\n",
                 "                result = None\n",
                 "                break\n",
-                "            local_best = unused.get().item\n",
-                "            result.append(local_best)\n",
+                "            local_best = unused.get()[-1]  # extract the locally best unused set\n",
+                "            result.append(local_best)  # append it to the solution\n",
                 "            result_set = result_set.union(local_best)\n",
                 "            while not unused.empty():\n",
-                "                options.put(unused.get())\n",
+                "                options.put(unused.get())  # reinsert unused sets in the options queue\n",
                 "    logging.info(f\"explored state: {discovered_state}\")\n",
                 "    return result"
             ]
